--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Live blogging with Socket.io and MERN Stack</title>
+    <title>Live blog app with Socket.io and MERN Stack</title>
   </head>
   <body>
     <div class="container"></div>
